style:重构推荐接口,修改逻辑为 UserProfileAgent -> ProductRecAgent -> InventoryAgent,耗时7.9min下降到3.9min