@@ -11,23 +11,18 @@ import jakarta.annotation.Resource;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Service;
+import org.springframework.util.CollectionUtils;
 
 import java.util.*;
-import java.util.concurrent.CompletableFuture;
 import java.util.stream.Collectors;
 
 /**
- * Supervisor编排器 — 并行分发 + 聚合模式 (Java CompletableFuture实现)
+ * Supervisor编排器 — 串行线性流程
  *
- *        ┌──────────────┐
- *        │  Supervisor   │
- *        └──────┬───────┘
- *   ┌─────┬─────┼─────┬──────┐
- *   ▼     ▼     ▼     ▼      │
- * Profile Rec  Copy Inventory │
- *   └─────┴─────┴─────┘      │
- *          ▼                  │
- *      Aggregator ◄───────────┘
+ *  ① UserProfileAgent → 获取/构建用户画像
+ *  ② ProductRecAgent  → 基于画像推荐商品
+ *  ③ InventoryAgent   → 检查推荐商品的库存
+ *  返回最终结果
  */
 @Service
 public class SupervisorOrchestrator {
@@ -39,134 +34,129 @@ public class SupervisorOrchestrator {
     @Resource
     private ProductRecAgent productRecAgent;
     @Resource
-    private MarketingCopyAgent marketingCopyAgent;
-    @Resource
     private InventoryAgent inventoryAgent;
     @Resource
     private ABTestService abTestService;
 
     public RecommendationResponse recommend(RecommendationRequest request) {
-        String requestId = UUID.randomUUID().toString();
         long start = System.nanoTime();
         Map<String, AgentResult> agentResults = new HashMap<>();
 
-        log.info("SupervisorOrchestrator.recommend start request={} user={}", requestId, request.getUserId());
+        // 步骤1: 获取用户画像
+        UserProfile profile = getUserProfile(request.getUserId(), agentResults);
 
-        String experimentGroup = abTestService.assign(request.getUserId()).getOrDefault("group", "control").toString();
+        // 步骤2: 基于画像推荐商品
+        List<Product> products = recommendProducts(request.getUserId(), profile, request.getNumItems(), agentResults);
 
-        // Phase 1: parallel — user profile + product recall
-        CompletableFuture<AgentResult> profileFuture = userProfileAgent.runAsync(
-                Map.of("userId", request.getUserId()));
-        CompletableFuture<AgentResult> recFuture = productRecAgent.runAsync(
-                Map.of("userId", request.getUserId(), "numItems", request.getNumItems()));
+        // 步骤3: 检查库存，过滤无货商品
+        List<Product> finalProducts = checkInventory(products, request.getNumItems(), agentResults);
 
-        AgentResult profileResult = profileFuture.join();
-        AgentResult recResult = recFuture.join();
-        agentResults.put("user_profile", profileResult);
-        agentResults.put("product_recall", recResult);
+        double totalLatencyMs = (System.nanoTime() - start) / 1_000_000.0;
+        return buildResponse(request, finalProducts, agentResults, totalLatencyMs);
+    }
 
-        UserProfile profile = profileResult.getData() != null
-                ? (UserProfile) profileResult.getData().get("profile") : null;
-        @SuppressWarnings("unchecked")
-        List<Product> rawProducts = recResult.getData() != null
-                ? (List<Product>) recResult.getData().get("products") : List.of();
+    /**
+     * 获取用户画像，失败时返回默认画像
+     */
+    private UserProfile getUserProfile(String userId, Map<String, AgentResult> agentResults) {
+        log.info("SupervisorOrchestrator.getUserProfile begin, userId: {}", userId);
+        AgentResult result = userProfileAgent.runAsync(Map.of("userId", userId)).join();
+        agentResults.put("user_profile", result);
 
-        log.info("SupervisorOrchestrator.recommend Phase1完成 画像={} 召回{}条商品",
-                profile != null ? profile.getSegments() : "null", rawProducts.size());
-
-        // Phase 2: rerank + inventory check
-        // 若画像缺失或信息不足，复用 Phase1 结果，避免重复检索。
-        CompletableFuture<AgentResult> rerankFuture;
-        if (hasUsableProfile(profile)) {
-            rerankFuture = productRecAgent.runAsync(
-                    Map.of("userId", request.getUserId(),
-                            "userProfile", profile,
-                            "numItems", request.getNumItems()));
-        } else {
-            rerankFuture = CompletableFuture.completedFuture(
-                    AgentResult.builder()
-                            .agentName("product_rec")
-                            .success(true)
-                            .data(Map.of(
-                                    "products", rawProducts.stream().limit(request.getNumItems()).collect(Collectors.toList()),
-                                    "rerank_skipped", true,
-                                    "reason", "profile_missing_or_not_informative"
-                            ))
-                            .confidence(0.8)
-                            .build()
-            );
+        UserProfile profile = null;
+        if (Objects.nonNull(result) && Objects.nonNull(result.getData())) {
+            profile = (UserProfile) result.getData().get("profile");
         }
 
-        // 提取商品ID传给库存Agent
-        List<String> productIds = rawProducts.stream()
+        if (!result.isSuccess() || Objects.isNull(profile)) {
+            log.warn("SupervisorOrchestrator.getUserProfile warn, profile获取失败，降级使用默认画像");
+            profile = UserProfile.builder().userId(userId).segments("active").build();
+        }
+
+        log.info("SupervisorOrchestrator.getUserProfile end, profile = {}", profile);
+        return profile;
+    }
+
+    /**
+     * 基于用户画像推荐商品
+     */
+    private List<Product> recommendProducts(String userId, UserProfile profile, int numItems,
+                                             Map<String, AgentResult> agentResults) {
+        log.info("SupervisorOrchestrator.recommendProducts - 推荐商品, userId: {}, numItems: {}", userId, numItems);
+        AgentResult result = productRecAgent.runAsync(Map.of(
+                "userId", userId,
+                "userProfile", profile,
+                "numItems", numItems
+        )).join();
+        agentResults.put("product_rec", result);
+
+        @SuppressWarnings("unchecked")
+        List<Product> products = result.getData() != null
+                ? (List<Product>) result.getData().get("products") : Collections.emptyList();
+
+        if (CollectionUtils.isEmpty(products)) {
+            log.warn("SupervisorOrchestrator.recommendProducts - 推荐商品为空");
+            return Collections.emptyList();
+        }
+
+        log.info("SupervisorOrchestrator.recommendProducts - 推荐完成, 共{}条商品", products.size());
+        return products;
+    }
+
+    /**
+     * 检查商品库存，过滤无货商品
+     */
+    private List<Product> checkInventory(List<Product> products, int numItems,
+                                           Map<String, AgentResult> agentResults) {
+        if (CollectionUtils.isEmpty(products)) {
+            return Collections.emptyList();
+        }
+
+        log.info("SupervisorOrchestrator.checkInventory - 库存检查, 共{}条商品", products.size());
+        List<String> productIds = products.stream()
                 .map(Product::getProductId)
                 .filter(Objects::nonNull)
                 .collect(Collectors.toList());
-        CompletableFuture<AgentResult> inventoryFuture = inventoryAgent.runAsync(
-                Map.of("productIds", productIds));
 
-        AgentResult rerankResult = rerankFuture.join();
-        AgentResult inventoryResult = inventoryFuture.join();
-        agentResults.put("rerank", rerankResult);
-        agentResults.put("inventory", inventoryResult);
+        AgentResult result = inventoryAgent.runAsync(Map.of("productIds", productIds)).join();
+        agentResults.put("inventory", result);
 
         @SuppressWarnings("unchecked")
-        List<Product> rankedProducts = rerankResult.getData() != null
-                ? (List<Product>) rerankResult.getData().get("products") : rawProducts;
-        @SuppressWarnings("unchecked")
-        List<String> availableIds = inventoryResult.getData() != null
-                ? (List<String>) inventoryResult.getData().get("available_products") : List.of();
-
-        log.info("SupervisorOrchestrator.recommend Phase2完成 精排{}条 可售{}条",
-                rankedProducts.size(), availableIds.size());
+        List<String> availableIds = result.getData() != null
+                ? (List<String>) result.getData().get("available_products") : Collections.emptyList();
 
         Set<String> availSet = new HashSet<>(availableIds);
-        List<Product> finalProducts = rankedProducts.stream()
+        List<Product> finalProducts = products.stream()
                 .filter(p -> availSet.contains(p.getProductId()))
-                .limit(request.getNumItems())
+                .limit(numItems)
                 .collect(Collectors.toList());
-        if (finalProducts.isEmpty()) {
-            log.warn("SupervisorOrchestrator.recommend 库存过滤后为空，使用精排结果兜底");
-            finalProducts = rankedProducts.stream().limit(request.getNumItems()).collect(Collectors.toList());
+
+        if (CollectionUtils.isEmpty(finalProducts)) {
+            log.warn("SupervisorOrchestrator.checkInventory - 库存过滤后无可用商品，使用原始推荐结果");
+            return products.stream().limit(numItems).collect(Collectors.toList());
         }
 
-        // Phase 3: marketing copy
-        List<String> finalProductIds = finalProducts.stream()
-                .map(Product::getProductId)
-                .collect(Collectors.toList());
-        AgentResult copyResult = marketingCopyAgent.runAsync(
-                        Map.of("userProfile", profile != null ? profile : new UserProfile(),
-                                "productIds", finalProductIds))
-                .join();
-        agentResults.put("marketing_copy", copyResult);
+        log.info("SupervisorOrchestrator.checkInventory - 库存检查完成, 可售: {}条", finalProducts.size());
+        return finalProducts;
+    }
 
-        @SuppressWarnings("unchecked")
-        List<com.ecommerce.vo.MarketingCopyVO> copies = copyResult.getData() != null
-                ? (List<com.ecommerce.vo.MarketingCopyVO>) copyResult.getData().get("copies") : List.of();
+    /**
+     * 构建推荐响应
+     */
+    private RecommendationResponse buildResponse(RecommendationRequest request, List<Product> products,
+                                                  Map<String, AgentResult> agentResults, double totalLatencyMs) {
+        String requestId = UUID.randomUUID().toString();
+        String experimentGroup = abTestService.assign(request.getUserId()).getOrDefault("group", "control").toString();
 
-        double totalLatency = (System.nanoTime() - start) / 1_000_000.0;
-        log.info("SupervisorOrchestrator.recommend complete request={} latency={:.1f}ms products={} experiment={}",
-                requestId, totalLatency, finalProducts.size(), experimentGroup);
+        log.info("SupervisorOrchestrator.buildResponse - requestId: {}, products: {}", requestId, products.size());
 
         return RecommendationResponse.builder()
                 .requestId(requestId)
                 .userId(request.getUserId())
-                .products(finalProducts)
-                .marketingCopies(copies)
+                .products(products)
                 .experimentGroup(experimentGroup)
                 .agentResults(agentResults)
-                .totalLatencyMs(totalLatency)
+                .totalLatencyMs(totalLatencyMs)
                 .build();
-    }
-
-    private boolean hasUsableProfile(UserProfile profile) {
-        if (profile == null) {
-            return false;
-        }
-        boolean hasSegments = profile.getSegments() != null && !profile.getSegments().isEmpty();
-        boolean hasCategoryPreference = profile.getPreferredCategories() != null
-                && !profile.getPreferredCategories().isEmpty();
-        boolean hasPriceRange = profile.getPriceRangeMin() != null && profile.getPriceRangeMax() != null;
-        return hasSegments || hasCategoryPreference || hasPriceRange;
     }
 }
